tools/tests/errors/surf_cls_08.experr
'C' does not support item assignment
